--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<img src="Images/Title.png" width="1500" height="200" alt="">
 	<br>
 	<h3>The career exploration process involves learning more about yourself, researching your options, trying new experiences, and creating a strategic plan to reach your professional goals! With my research on careers, I've chosen 3 careers that have appealed to me!</h3>
-	<h4>The following opotions below are the jobs I've chosen!</h4>
+	<h4>The following options below are the jobs I've chosen!</h4>
 </center>
 
 <a href="Careers/Chef.html">
@@ -45,7 +45,7 @@
 	<a href="Careers/Thoughts.html">
 		<div class="cloud">
 			<img src="Images/Cloud.png" alt="Thoughts" width="300">
-			<p>Whare are my thoughts on these careers?</p>
+			<p>What are my thoughts on these careers?</p>
 		</div>
 	</a>
 </center>
