--- a/Careers/Chef.html
+++ b/Careers/Chef.html
@@ -11,7 +11,7 @@
 <center>	
 	<img src="../Images/ChefName.png" width="1500" height="200" alt=""> 
 	<br>
-	<a href="../Home.html">Go to Home</a>
+	<a href="../index.html">Go to Home</a>
 </center>	
 
 <div class="img">
@@ -21,7 +21,7 @@
 		A Chef or Cook is responsible for using their culinary expertise to create appetizing dishes for consumers to enjoy. Their duties are overseeing kitchen staff, tasting dishes before going to customers and restocking food produce as needed. Places where you can be a chef at are in restaurants, hotels and cruise ships
 <br>
 	<ul>
-		5 skills needed for being a chef
+		5 skills needed for being a Chef
 <br>
 			<li>Communication skills</li>
 			<li>Ability to work well with others</li>
@@ -42,7 +42,7 @@
 <br>
 	
 	<ul>
-		Job outlook
+		Job Outlook
 			<li>5% ( than average)</li>
 			<li>Employment of chefs and head cooks is projected to grow 5 percent from around 2022 to 2032..</li>
 	</ul>
@@ -67,9 +67,9 @@
 	<ul>
 		Pros
 			<li>Well paying salary</li>
-			<li>Knowing how to cook my own meals</li>
+			<li>Knowing how to cook my meals</li>
 			<li>Creativity</li>
-			<li>The oppurntunity to open my own shop (resturaunt, cafe, bakery, etc..)</li>
+			<li>The opportunity to open my shop (restaurant, cafe, bakery, etc..)</li>
 	</ul>
 	
 <br>
@@ -86,14 +86,14 @@
 	
 	<ul>
 		Why is being a chef a good fit? Why select this profession?	
-			<li>This job is a good fit for me because I really love food and want to cook the best meals for myself and for others. The job pays well and I can live comfortably under the salary of being a chef.</li>
+			<li>This job is a good fit for me because I love food and want to cook the best meals for myself and others. The job pays well and I can live comfortably under the salary of being a chef.</li>
 	</ul>
 	
 <br>
 	
 	<ul>
 		What are some things that may hold you back from obtaining this career?
-		 <li>Whats mainly holding me back from obtaining this career is the cost of vet school. The cost of schools could be around $150,000 to $420,000. I'd have to do a lot to pay it all off.</li>
+		 <li> What's mainly holding me back from obtaining this career is the cost of vet school. The cost of schools could be around $150,000 to $420,000. I'd have to do a lot to pay it all off.</li>
 	</ul>
 	
 <br>
