--- a/Careers/Thoughts.html
+++ b/Careers/Thoughts.html
@@ -10,7 +10,7 @@
 <center>
   <img src="../Images/Oop.png" width="400" alt="whuh">
   <h3>My Thoughts</h3>
-	<a href="../Home.html">Go to Home</a>
+	<a href="../index.html">Go to Home</a>
   </center>
 
 <br>
@@ -22,7 +22,7 @@
 		
 		<br>
 		
-		<p>Web Developer - It's laid back job where I can either work at an office or in the comfort of my own home. I love that.</p>
+		<p>Web Developer - It's laid laid-back job where I can either work at an office or in the comfort of my own home. I love that.</p>
 		
 		<br>
 		
@@ -33,15 +33,15 @@
 	<div class="column middle">
 		<h2>Do I truly see myself enjoying these as careers in the future?</h2>
 		
-		<p>Chef - Yes! To be able to cook for my family and make them pleased with my cooking would make me happy. Same goes for customers. Being a chef as a career would be fun! There are some down sides to this though. I'd have faniacial problems here and there. But I feel if I be smart, I'll be doing good.</p>
+		<p>Chef - Yes! To be able to cook for my family and make them pleased with my cooking would make me happy. The same goes for customers. Being a chef as a career would be fun! There are some downsides to this though. I'd have financial problems here and there. But I feel if I am smart, I'll be doing good.</p>
 		
 		<br>
 		
-		<p>Web Developer - Yes! I can enjoy making my own websites and show some creativity behind them. Though the job can support a comfortable life, this job isn't very active. All I do is just sit around in front of a computer until my shift is done. But I can figure out solutions for that. Such as excersizes or stretches after my work is done. </p>
+		<p>Web Developer - Yes! I can enjoy making my websites and show some creativity behind them. Though the job can support a comfortable life, this job isn't very active. All I do is just sit around in front of a computer until my shift is done. But I can figure out solutions for that. Such as exercises or stretches after my work is done. </p>
 		
 		<br>
 		
-		<p>Veterinarian - Yes! Animals are cute and they deserve the best care they can get. I'll take good care of the animals and get the satisfaction to interact with cute pets. Sure, I'd have to have a lot of patience with animals with behavioral issues, but I feel I can manage. Plus, the pay as a vet is very good! I can live with this career easily, hands down.</p>
+		<p>Veterinarian - Yes! Animals are cute and they deserve the best care they can get. I'll take good care of the animals and get the satisfaction of interacting with cute pets. Sure, I'd have to have a lot of patience with animals with behavioral issues, but I feel I can manage. Plus, the pay as a vet is very good! I can live with this career easily, hands down.</p>
 		
 		
 	</div>	
@@ -49,7 +49,7 @@
 	
 	<div class="column side">
 		<h2>More Thoughts</h2>
-		<p>Overall, these careers would be an amazing fit for me! Cooking, coding and treating seem like things I'd enjoy to do as a career. </p>
+		<p>Overall, these careers would be an amazing fit for me! Cooking, coding, and treating seem like things I'd enjoy doing as a career. </p>
 	</div>
 	
 </div>
