--- a/Careers/Vet.html
+++ b/Careers/Vet.html
@@ -11,19 +11,19 @@
 <center>	
 	<img src="../Images/NameVet.png" width="1500" height="200" alt=""> 
 	<br>
-	<a href="../Home.html">Go to Home</a>
+	<a href="../index.html">Go to Home</a>
 </center>	
 
 <div class="img">
 	<img src="../Images/Vet.png" alt="Vet" style="width:1000px;height:1000px;">
 </div>
 	<p>
-		Veterinarians treat the injuries and illnesses of pets and other animals with a variety of medical equipment. They work at vet hospital. They usually work around 8 hours shifts. Possibly less or more.
+		Veterinarians treat the injuries and illnesses of pets and other animals with a variety of medical equipment. They work at a vet hospital. They usually work around 8-hour shifts. Possibly less or more.
 <br>
 	<ul>
 		5 skills needed for being a Vet
 <br>
-			<li>Have paitence with the animals</li>
+			<li>Have patience with the animals</li>
 			<li>Knwoledge on animal anatomy</li>
 			<li>Knowledge with medical equipment</li>
 			<li>Able properly care for pets</li>
@@ -70,7 +70,7 @@
 		Pros
 			<li>Excellent salary!</li>
 			<li>Helping animals</li>
-			<li>Getting to see all kind of pets at the vet</li>
+			<li>Getting to see all kinds of pets at the vet</li>
 			<li>Rewarding job</li>
 	</ul>
 	
@@ -87,7 +87,7 @@
 <br>
 	
 	<ul>
-		Why is being a veterinarians a good fit? Why select this profession?
+		Why is being a veterinarian a good fit? Why select this profession?
 			<li>This job is a good fit for me because I love animals and want to be there to help them! Animals I would love to care for are dogs, cats, turtles, and frogs!</li>
 	</ul>
 	
@@ -95,7 +95,7 @@
 	
 	<ul>
 		What are some things that may hold you back from obtaining this career?
-		 <li>Whats mainly holding me back from obtaining this career is the cost of vet school. The cost of schools could be around $150,000 to $420,000. I'd have to do a lot to pay it all off.</li>
+		 <li> What's mainly holding me back from obtaining this career is the cost of vet school. The cost of schools could be around $150,000 to $420,000. I'd have to do a lot to pay it all off.</li>
 	</ul>
 	
 	<ul>
