--- a/Careers/Web Developer.html
+++ b/Careers/Web Developer.html
@@ -10,7 +10,7 @@
 	<center>	
 		<img src="../Images/WebName.png" width="1500" height="200" alt=""> 
 		<br>
-		<a href="../Home.html">Go to Home</a>
+		<a href="../index.html">Go to Home</a>
 	</center>
 
 <div class="img">
@@ -18,7 +18,7 @@
 </div>
 	
 	<p>
-		A Web Developer is a professional who is responsible for the design and construction of websites. They can work at home, or an office. They usually work around 8 hours shifts.
+		A Web Developer is a professional who is responsible for the design and construction of websites. They can work at home, or in an office. They usually work around 8-hour shifts.
 	</p>
 
 <br>
@@ -27,7 +27,7 @@
 		5 skills needed for being a Web Developer
 			<li>Coding skills</li>
 			<li>Ability to work well with others</li>
-			<li>Knowledge on coding (html, css, java..)</li>
+			<li>Knowledge of coding (HTML, CSS, java..)</li>
 			<li>Able to accept criticism</li>
 			<li>Communication skills</li>
 	</ul>
@@ -53,7 +53,7 @@
 <br>
 	
 	<ul>
-		Job outlook
+		Job Outlook
 			<li>16% (Much faster than average)</li>
 			<li>Employment of web developers is projected to grow 16 percent from 2022 to 2032..</li>
 	</ul>
@@ -80,7 +80,7 @@
 			<li>Well paying salary</li>
 			<li>Knowing how to create sites</li>
 			<li>Creativity</li>
-			<li>The oppurntunity to create my own sites</li>
+			<li>The opportunity to create my sites</li>
 	</ul>
 	
 <br>
@@ -97,14 +97,14 @@
 	
 	<ul>
 		Why is being a web developer a good fit? Why select this profession?	
-			<li>This job is a good fit because I enjoy coding and making my own sites. I am good with making websites. I can show off my creativity on the sites I create. </li>
+			<li>This job is a good fit because I enjoy coding and making my sites. I am good at making websites. I can show off my creativity on the sites I create. </li>
 	</ul>
 	
 <br>
 	
 	<ul>
 		What kind of lifestyle can this job support?	
-			<li>I want to live comfortably. A web developing job is enough to sustain that. I want enough to get by and live the comfortable life I thrive for.</li>
+			<li>I want to live comfortably. A web developing job is enough to sustain that. I want enough to get by and live the comfortable life I strive for.</li>
 	</ul>
 
 <br>
